--- a/GithubNemmesis/src/hibernate/ejemplos/clase/index.html
+++ b/GithubNemmesis/src/hibernate/ejemplos/clase/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Hola Ruth</title>
+<title>PEDIR NUEVO EMPLEADO</title>
 </head>
 <body>
 <br>
