--- a/GithubNemmesis/src/hibernate/ejemplos/clase/index.html
+++ b/GithubNemmesis/src/hibernate/ejemplos/clase/index.html
@@ -15,9 +15,10 @@ ID_Empleado: <br> <input type="text" name="ID_Empleado"><br>
 <!-- <input type="submit" value="Enviar"> -->
 <!-- </form> -->
 
-<form action="NuevoPedirEmpleadoJDBC" method="get">
+<!-- <form action="NuevoPedirEmpleadoJDBC" method="get">
 ID_Empleado: <br> <input type="text" name="ID_Empleado"><br>
-<input type="submit" value="Enviar">
+<input type="submit" value="Enviar"> -->
+<form action="ServletRedireccion" method="get">
 </form>
 </body>
 </html>
