--- a/GithubNemmesis/src/hibernate/ejemplos/clase/login.html
+++ b/GithubNemmesis/src/hibernate/ejemplos/clase/login.html
@@ -13,7 +13,7 @@ ACCESO A LA BBDD
 <br>
 Nombre: <br> <input type="text" name="username"><br>
 <br>
-Contraseña: <br> <input type="text" name="pass"><br>
+Contraseña: <br> <input type="password" name="pass"><br>
 <br>
 <input type="submit" value="Enviar">
 <br>
