--- a/GithubNemmesis/src/index.html
+++ b/GithubNemmesis/src/index.html
@@ -1,34 +1,24 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta charset="UTF-8">
-<title>XML Element count</title>
-<style type="text/css">
-body {
-	text-align: center;
-	background: rgba(212, 228, 239, 1);
-	background: -moz-linear-gradient(45deg, rgba(212, 228, 239, 1) 0%,
-		rgba(134, 174, 204, 1) 100%);
-	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(212, 228,
-		239, 1)), color-stop(100%, rgba(134, 174, 204, 1)));
-	background: -webkit-linear-gradient(45deg, rgba(212, 228, 239, 1) 0%,
-		rgba(134, 174, 204, 1) 100%);
-	background: -o-linear-gradient(45deg, rgba(212, 228, 239, 1) 0%,
-		rgba(134, 174, 204, 1) 100%);
-	background: -ms-linear-gradient(45deg, rgba(212, 228, 239, 1) 0%,
-		rgba(134, 174, 204, 1) 100%);
-	background: linear-gradient(45deg, rgba(212, 228, 239, 1) 0%,
-		rgba(134, 174, 204, 1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef',
-		endColorstr='#86aecc', GradientType=1);
-}
-</style>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>Medir tiempo</title>
 </head>
 <body>
-	<form action="ContarElementosXMLServlet" method="get">
-		<input type="text" placeholder="Introduce la url del xml" name="url" />
-		</br>
-		<input type="submit" value="Contar Elementos">
-	</form>
+<br>
+<!--form action="PedirEmpleado" method="get">
+ID_Empleado: <br> <input type="text" name="ID_Empleado"><br>
+<input type="submit" value="Enviar">
+
+<!-- <form action="NuevoPedirEmpleado" method="get"> -->
+<!-- ID_Empleado: <br> <input type="text" name="ID_Empleado"><br> -->
+<!-- <input type="submit" value="Enviar"> -->
+<!-- </form> -->
+
+<!-- <form action="NuevoPedirEmpleadoJDBC" method="get">
+ID_Empleado: <br> <input type="text" name="ID_Empleado"><br>
+<input type="submit" value="Enviar">  -->
+<form action="ServletError" method="get">
+</form>
 </body>
 </html>
